--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
   "scripts": {
     "start:dev": "nodemon index.js",
     "test": "jest"
-
   },
   "repository": {
     "type": "git",
@@ -21,8 +20,11 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "chalk": "^5.0.1",
+    "credit-card-type": "^9.1.0",
+    "csvtojson": "^2.0.10",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "express-fileupload": "^1.4.0",
     "pg": "^8.7.3"
   },
   "devDependencies": {
