--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "credit-card-type": "^9.1.0",
     "csvtojson": "^2.0.10",
     "dotenv": "^16.0.1",
+    "email-validator": "^2.0.4",
     "express": "^4.18.1",
     "express-fileupload": "^1.4.0",
-    "pg": "^8.7.3"
+    "pg": "^8.7.3",
+    "validator": "^13.7.0"
   },
   "devDependencies": {
     "jest": "^28.1.0",
