--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "email-validator": "^2.0.4",
     "express": "^4.18.1",
     "express-fileupload": "^1.4.0",
+    "jsonwebtoken": "^8.5.1",
     "pg": "^8.7.3",
     "validator": "^13.7.0"
   },
