corrections for docker dpeloyment docker-compose file

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "chalk": "^5.0.1",
+    "cors": "^2.8.5",
     "credit-card-type": "^9.1.0",
     "csvtojson": "^2.0.10",
     "dotenv": "^16.0.1",
