--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,23 +3,27 @@ services:
   db:
     image: postgres:latest
     restart: unless-stopped
+    env_file: .env
     environment:
-      - POSTGRES_PASSWORD=pass
-      - POSTGRES_DATABASE=docker
+      - POSTGRES_USER=$DB_USER
+      - POSTGRES_PASSWORD=$DB_PASSWORD
+      - POSTGRES_DATABASE=$DB_NAME
     ports:
-      - '5432:5432'
+      - $DB_PORT:$DB_PORT
   app:
     depends_on:
       - db
     build:
       context: .
     restart: unless-stopped
+    env_file: .env
     ports:
-      - 3000:3000
+      - $SERVER_PORT:$SERVER_PORT
     environment:
-      - DB_USER=postgres
-      - DB_PASSWORD=pass
-      - DB_NAME=docker
-      - DB_PORT=5432
+      - SERVER_PORT=$SERVER_PORT
+      - DB_USER=$DB_USER
+      - DB_PASSWORD=$DB_PASSWORD
+      - DB_NAME=$DB_NAME
+      - DB_PORT=$DB_PORT
       - DB_HOST=db
     tty: true
