--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,4 +26,23 @@ services:
       - DB_NAME=$DB_NAME
       - DB_PORT=$DB_PORT
       - DB_HOST=db
+    volumes:
+      - api:/app/target
     tty: true
+  interface:
+    depends_on:
+      - db
+    image: interface
+    env_file: .env
+    environment:
+      - DB_USER=$DB_USER
+      - DB_PASSWORD=$DB_PASSWORD
+      - DB_NAME=$DB_NAME
+      - DB_PORT=$DB_PORT
+      - DB_HOST=db
+      - EXECUTION_FRECUENCY=*
+    volumes:
+      - api:/app/target
+volumes:
+  api:
+      
