--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,6 +33,7 @@ services:
     depends_on:
       - db
     image: interface
+    restart: unless-stopped
     env_file: .env
     environment:
       - DB_USER=$DB_USER
