--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,7 +32,7 @@ services:
   interface:
     depends_on:
       - db
-    image: interface
+    image: luisevilla/contact-importer-contact-uploader
     restart: unless-stopped
     env_file: .env
     environment:
